changes for ropsten

--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,7 @@
         <button id="setSalt">Submit Salt</button>
     </div>
     <script src="development.js"></script>
+    <script src="ropsten.js"></script>
     <script src="dapp.js"></script>
 </body>
 </html>
