Add pause/unpause to front-end

--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,18 @@
     <div>
         <button id="setSalt">Submit Salt</button>
     </div>
+
+    <hr>
+
+    <h2>Lucky Draw Controller</h2>
+    <div>
+        <button id="getControllerState">Get State</button>
+        <button id="toggleControllerState">Pause/Unpause</button>
+        <br>
+        Lucky Draw Controller State: <input type="text" id="controllerState" disabled readonly>
+        
+    </div>
+
     <script src="development.js"></script>
     <script src="ropsten.js"></script>
     <script src="dapp.js"></script>
