Add documenation per project requirements

--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
     </div>
     <br><br>
     <div> 
-        IPFS cid: <input type="text" id="entryUrl" value=""> <button id="verifyEntries">Verify Entries</button> <button id="verifyEntryWithin">Verify Entry Within Submited</button>
+        IPFS cid: <input type="text" id="IPFScid" value=""> <button id="verifyEntries">Verify Entries</button> <button id="verifyEntryWithin">Verify Entry Within Submited</button>
         <br>
         <button id="setEntries">Submit Entries</button>
     </div>
