--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
         <br><br>
         Lucky Draw ID
         <select name="Lucky Draw ID" id="luckyDrawIds"></select>
-        <button id="loadLuckyDraw">Load Lucky Draws</button>
+        <button id="loadLuckyDraw">Load Lucky Draw</button>
         <br>
         Name:<input type="text" id="nameManage" disabled readonly>
         <br>
@@ -52,7 +52,7 @@
         Hash: <input type="text" id="hash"> <br>
         Number of Entries: <input type="text" id="numEntries">
     </div>
-    <br><br>
+    <br>
     <div> 
         IPFS cid: <input type="text" id="IPFScid" value=""> <button id="verifyEntries">Verify Entries</button> <button id="verifyEntryWithin">Verify Entry Within Submited</button>
         <br>
