--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 
     <h1>Lucky Draw</h1>
     <div id="mm-detected"></div>
-    <button id="mm-connect">Connect to Metamask</button>
+    <button id="mm-connect">Connect to Metamask (Ropsten or Ganache)</button>
     <div id="mm-current-account"></div>
     <p></p>
     <hr>
